--- a/src/app/modules/layout/component/footer/footer.component.html
+++ b/src/app/modules/layout/component/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<footer class="bg-dark">
+    <div class="text-center">
+        <p>Copyright: <a href="#"> CLOPEWOP</a></p>
+        <p>Consulta nuestro <a href="#">Aviso de Privaciodad</a> y <a href="#">Terminos y Condiciones</a> </p>
+    </div>
+</footer>
