--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,189 +1,4 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<body>
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-success">
-      <div class="container px-4 px-lg-5">
-          <a class="navbar-brand" href="#!">Farmacia Cristo Celestial</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Principal</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#!">Información</a></li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#!">Todos los productos</a></li>
-                          <li><hr class="dropdown-divider" /></li>
-                          <li><a class="dropdown-item" href="#!">Articulos populares</a></li>
-                          <li><a class="dropdown-item" href="#!">Nuevos</a></li>
-                      </ul>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="#!">Favoritos</a></li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ofertas</a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#!">Hombre</a></li>
-                          <li><a class="dropdown-item" href="#!">Mujer</a></li>
-                          <li><a class="dropdown-item" href="#!">Niños</a></li>
-                          <li><a class="dropdown-item" href="#!">Niñas</a></li>
-                          <li><a class="dropdown-item" href="#!">Bebes</a></li>
-                      </ul>
-                  </li>
-                  <li class="nav-item"><a class="nav-link" href="#!">Preguntas Frecuentes</a></li>
-              </ul>
-              <form class="d-flex">
-                  <button class="btn btn-outline-dark" onclick="timeOut()" data-bs-toggle="modal" data-bs-target="#dialogTotal">
-                      <i class="bi-cart-fill me-1"></i>
-                      Carrito
-                      <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart">0</span>
-                  </button>
-              </form>
-          </div>
-      </div>
-  </nav>
-  <!-- Header-->
-  <header class="bg-primary py-5">
-      <div class="container px-4 px-lg-5 my-5">
-          <div class="text-center text-white">
-              <h1 class="display-4 fw-bolder">Farmacia</h1>
-              <p class="lead fw-normal text-white-50 mb-0">Los mejores medicamentos a tu alcance.</p>
-          </div>
-      </div>
-  </header>
-  <!-- Section-->
-  <section class="py-5">
-      <div class="container px-4 px-lg-5 mt-5">
-          <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-              <div class="col mb-5">
-                  <div class="card h-100">
-                      <!-- Product image-->
-                      <img class="card-img-top" src="assets/ketorolaco.png" alt="..." />
-                      <!-- Product details-->
-                      <div class="card-body p-4">
-                          <div class="text-center" >
-                              <!-- Product name-->
-                              <h5 class="fw-bolder" COLOR="black">Ketorolaco Tabletas</h5>
-                              <!-- Product price-->
-                              $50.00
-                          </div>
-                      </div>
-                      <!-- Product actions-->
-                      <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-success mt-auto" href="#" onclick="selectProduct(1)">Añadir al carrito</a></div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col mb-5">
-                  <div class="card h-100">
-                      <!-- Sale badge-->
-                      <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                      <!-- Product image-->
-                      <img class="card-img-top" src="assets/diclofenaco.png" alt="..." />
-                      <!-- Product details-->
-                      <div class="card-body p-4">
-                          <div class="text-center">
-                              <!-- Product name-->
-                              <h5 class="fw-bolder">Diclofenaco</h5>
-                              <!-- Product reviews-->
-                              <div class="d-flex justify-content-center small text-warning mb-2">
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                              </div>
-                              <!-- Product price-->
-                              <span class="text-muted text-decoration-line-through">$20.00</span>
-                              $18.00
-                          </div>
-                      </div>
-                      <!-- Product actions-->
-                      <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" onclick="selectProduct(2)">Añadir al carrito</a></div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col mb-5">
-                  <div class="card h-100">
-                      <!-- Sale badge-->
-                      <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                      <!-- Product image-->
-                      <img class="card-img-top" src="assets/Dexametasona.png" alt="..." />
-                      <!-- Product details-->
-                      <div class="card-body p-4">
-                          <div class="text-center">
-                              <!-- Product name-->
-                              <h5 class="fw-bolder">Dexametasona</h5>
-                              <!-- Product price-->
-                              <span class="text-muted text-decoration-line-through">$50.00</span>
-                              $45.00
-                          </div>
-                      </div>
-                      <!-- Product actions-->
-                      <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" onclick="selectProduct(3)">Add to cart</a></div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col mb-5">
-                  <div class="card h-100">
-                      <!-- Product image-->
-                      <img class="card-img-top" src="assets/Tempra.jpeg" alt="..." />
-                      <!-- Product details-->
-                      <div class="card-body p-4">
-                          <div class="text-center">
-                              <!-- Product name-->
-                              <h5 class="fw-bolder">Tempra</h5>
-                              <!-- Product reviews-->
-                              <div class="d-flex justify-content-center small text-warning mb-2">
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                                  <div class="bi-star-fill"></div>
-                              </div>
-                              <!-- Product price-->
-                              $40.00
-                          </div>
-                      </div>
-                      <!-- Product actions-->
-                      <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                          <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#" onclick="selectProduct(4)">Add to cart</a></div>
-                      </div>
-                  </div>
-              </div>
-
-          </div>
-      </div>
-  </section>
-
-  <!-- Modal -->
-<div class="modal fade" id="dialogTotal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog">
-<div class="modal-content">
-  <div class="modal-header">
-    <h5 class="modal-title fw-bolder" id="staticBackdropLabel">Continuar con la compra</h5>
-  </div>
-  <div class="modal-body">
-    <ul class="list-group list-group-flush" id="productList">
-
-    </ul>
-  </div>
-  <div class="modal-footer">
-    <button id="cancelModal" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-    <button type="button" class="btn bg-primary text-white" onclick="success()">Pagar</button>
-  </div>
-</div>
-</div>
-</div>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert-dev.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" />
- 
-</body>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
