--- a/src/styles.css
+++ b/src/styles.css
@@ -11979,3 +11979,12 @@
  .card .h6 {
    text-shadow: 0 0 1px rgba(255, 255, 255, 0.6), 0 0 3px rgba(255, 255, 255, 0.5), 0 0 0.5rem rgba(255, 255, 255, 0.3), 0 0 2rem rgba(255, 255, 255, 0.2);
  }
+
+ .marginForm{
+   margin-top: 5px;
+   margin-bottom: 5px;
+ }
+
+ .btn-block{
+   width: 100%;
+ }
