--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -12,7 +12,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Regiones</a>
+          <a class="nav-link" routerLink="/region">Regiones</a>
         </li>
 
         <li class="nav-link">|</li>
@@ -22,13 +22,17 @@
           </li>
   
           <li class="nav-item">
-            <a class="nav-link" href="#">Categorias</a>
+            <a class="nav-link" routerLink="/category">Categorias</a>
           </li>
   
           <li class="nav-link">|</li>
 
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fas fa-file-invoice-dollar"></i> &nbsp;&nbsp;Facturas</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/exchange-rate">&nbsp;&nbsp;Tasa de Cambio</a>
           </li>
 
 
