--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -8,7 +8,7 @@
       <ul class="navbar-nav ms-auto" id="navbarDWF">
 
         <li class="nav-item active">
-          <a class="nav-link" href="#"> <i class="fas fa-users"></i> &nbsp;&nbsp;Clientes</a>
+          <a class="nav-link" routerLink="/customer"> <i class="fas fa-users"></i> &nbsp;&nbsp;Clientes</a>
         </li>
 
         <li class="nav-item">
@@ -18,7 +18,7 @@
         <li class="nav-link">|</li>
 
         <li class="nav-item active">
-            <a class="nav-link" href="#"><i class="fas fa-gift"></i> &nbsp;&nbsp;Productos</a>
+            <a class="nav-link" routerLink="/product"><i class="fas fa-gift"></i> &nbsp;&nbsp;Productos</a>
           </li>
   
           <li class="nav-item">
