--- a/src/styles.css
+++ b/src/styles.css
@@ -657,8 +657,6 @@
    padding-left: var(--bs-gutter-x, 0.75rem);
    margin-right: auto;
    margin-left: auto;
-   margin-top: 10px;
-   margin-bottom: 10px;
  }
  
  @media (min-width: 576px) {
@@ -11980,11 +11978,15 @@
    text-shadow: 0 0 1px rgba(255, 255, 255, 0.6), 0 0 3px rgba(255, 255, 255, 0.5), 0 0 0.5rem rgba(255, 255, 255, 0.3), 0 0 2rem rgba(255, 255, 255, 0.2);
  }
 
- .marginForm{
-   margin-top: 5px;
-   margin-bottom: 5px;
- }
+ .card-title, .card-header {
+  color: inherit;
+}
 
- .btn-block{
-   width: 100%;
- }
+.marginForm{
+ margin-top: 5px;
+ margin-bottom: 5px;
+}
+
+.btn-block{
+ width: 100%;
+}
